--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_USER=postgres
-DATABASE_PASSWORD=pass123
+DATABASE_PASSWORD=postgres
 DATABASE_NAME=postgres
 DATABASE_PORT=5432
-DATABASE_HOST=localhost
+DATABASE_HOST=127.0.0.1
