--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
 # compiled output
 /dist
 /node_modules
@@ -9,9 +20,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-
-# OS
-.DS_Store
 
 # Tests
 /coverage
