--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=postgres
 DATABASE_PORT=5432
-DATABASE_HOST=127.0.0.1
+DATABASE_HOST=localhost
