--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,6 +124,8 @@ functional_test:
   image: node:14-alpine
   variables:
     POSTGRES_PASSWORD: "postgres"
+    POSTGRES_USER: "postgres"
+    POSTGRES_DB: "postgres"
   services:
     - name: postgres:9.6
       alias: db
