--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,11 @@ sonar.projectKey=${env.CI_PROJECT_PATH_SLUG}
 sonar.projectVersion=${env.SONAR_PROJECT_VERSION}
 sonar.exclusions=${env.SONAR_EXCLUSIONS}
 sonar.sources=${env.SONAR_SOURCE}
+sonar.tests=${env.SONAR_TEST}
+sonar.test.inclusions=${env.SONAR_TEST_INCLUSIONS}
+# Now specify path of lcov and testlog
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=coverage/clover.xml
 sonar.login=${env.SONAR_LOGIN}
 sonar.host.url=${env.SONAR_URL}
 sonar.sourceEncoding=UTF-8
