fix: coverage artifacts fix: target port for k8s service

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,6 +136,8 @@ coverage_test:
     - yarn test:cov
   artifacts:
     when: always
+    paths:
+      - coverage/
     reports:
       cobertura:
         - coverage/clover.xml
