fix: unit_test artifact

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,6 +112,8 @@ unit_test:
     - yarn test
   artifacts:
     when: always
+    paths:
+      - junit.xml
     reports:
       junit:
         - junit.xml
