--- a/k8s/coffee-api/templates/iluvcoffee-vs.yaml
+++ b/k8s/coffee-api/templates/iluvcoffee-vs.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: iluvcoffee
+  name: coffee-api
 spec:
   selector:
     istio: ingressgateway # use istio default controller
@@ -28,19 +28,19 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: iluvcoffee
+  name: coffee-api
 spec:
   hosts:
   - "apicoffee.clm.team"
   gateways:
-  - iluvcoffee
+  - coffee-api
   http:
   - match:
     - uri:
         prefix: /
     route:
     - destination:
-        host: iluvcoffee
+        host: coffee-api
         port:
           number: 80
         
