--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --ci --reporters=default --reporters=jest-junit",
+    "test": "jest --ci",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -53,6 +53,7 @@
     "eslint-plugin-import": "^2.20.1",
     "jest": "26.4.2",
     "jest-junit": "^12.1.0",
+    "jest-sonar-reporter": "^2.0.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
@@ -75,6 +76,6 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "testResultsProcessor": "jest-junit"
+    "testResultsProcessor": "jest-sonar-reporter"
   }
 }
