--- a/k8s/coffee-api/templates/tests/test-connection.yaml
+++ b/k8s/coffee-api/templates/tests/test-connection.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "coffee-api.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
+    "sidecar.istio.io/inject": "false"
 spec:
   containers:
     - name: wget
