fix: junit report for gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -116,7 +116,7 @@ unit_test:
       - test-report.xml
     reports:
       junit:
-        - test-report.xml
+        - junit.xml
   only:
     refs:
     - branches
