fix: needs on pipeline jobs feat: more checks for loadtesting

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,8 @@ stages:
     - set_k8s
     - docker_registry_gcp
     - deploy_gke
-  needs:
-    - validate_docker
+  # needs:
+  #   - validate_docker
   except:
     refs:
     - tags
@@ -90,8 +90,6 @@ build:
   stage: build
   script:
     - yarn install && yarn build
-  needs:
-    - pre-semantic-version
   only:
     refs:
     - branches
@@ -113,8 +111,6 @@ unit_test:
   allow_failure: true
   script:
     - yarn test
-  needs:
-    - build
   artifacts:
     when: always
     paths:
@@ -141,8 +137,6 @@ coverage_test:
   allow_failure: true
   script:
     - yarn test:cov
-  needs:
-    - build
   artifacts:
     when: always
     paths:
@@ -176,8 +170,6 @@ functional_test:
   # allow_failure: true
   script:
     - yarn test:e2e
-  needs:
-    - build
   only:
     refs:
     - branches
@@ -200,8 +192,6 @@ detect_secrets:
   script:
     - detect-secrets scan $SCAN_SOURCE >> .detect-secrets-log.json
     - jq . .detect-secrets-log.json -C
-  needs:
-    - build
   only:
     refs:
     - branches
@@ -242,7 +232,6 @@ sonar_test:
   script:
     - sonar-scanner --debug
   needs:
-    - pre-semantic-version
     - unit_test
     - coverage_test
   only:
@@ -287,8 +276,6 @@ package_docker:
             ${DOCK_REG_GCP}/${DOCK_REG_GRP}/${DOCK_IMG}:latest
         docker push ${DOCK_REG_GCP}/${DOCK_REG_GRP}/${DOCK_IMG}:latest
       fi
-  needs:
-    - build
   only:
     refs:
       - master
@@ -320,8 +307,6 @@ validate_docker:
     - echo $DOCK_VERSION    
   script:
     - klar ${DOCK_REG_GCP}/${DOCK_REG_GRP}/${DOCK_IMG}:${DOCK_VERSION}
-  needs:
-    - package_docker
   retry: 1
   only:
     refs:
@@ -369,10 +354,6 @@ testing_k8s:
     - set_k8s
     - helm test ${RELEASE_NAME} --namespace ${KUBE_NAMESPACE}
     - kubectl delete pod ${RELEASE_NAME}-test-connection --namespace ${KUBE_NAMESPACE}
-  needs:
-    - deploy:dev
-    - deploy:qa
-    - deploy:prod
   only:
     refs:
       - develop
@@ -396,10 +377,6 @@ testing_api:
   cache: {}
   script:
     - newman run test/coffee-api.test.json --reporters cli,junit 
-  needs:
-    - deploy:dev
-    - deploy:qa
-    - deploy:prod
   only:
     refs:
       - develop
@@ -426,10 +403,6 @@ testing_load:
   cache: {}
   script:
     - k6 run test/coffee-api.loadtest.js 
-  needs:
-    - deploy:dev
-    - deploy:qa
-    - deploy:prod
   only:
     refs:
       - develop
@@ -458,13 +431,6 @@ rollback:
     - echo "Ejecutar comando de rollback con helm"
     - helm rollback $RELEASE_NAME $(helm history $RELEASE_NAME | grep deployed | cut -f1) --wait
     - helm status $RELEASE_NAME
-  needs:
-    - deploy:dev
-    - deploy:qa
-    - deploy:prod
-    - testing_k8s
-    - testing_api
-    - testing_load
   when: on_failure
   only:
     refs:
@@ -486,10 +452,6 @@ release:
   cache: {}
   script:
     - npx semantic-release
-  needs:
-    - testing_k8s
-    - testing_api
-    - testing_load
   only:
     refs:
       - master
